fix: line height, spacing for mobile

--- a/styles/components/charts.scss
+++ b/styles/components/charts.scss
@@ -2,7 +2,7 @@
 .echarts-for-react {
     background-color: $codGray2;
     padding: toRem(10);
-    margin-bottom: toRem(22);
+    margin-bottom: toRem(37);
 }
 
 .chart-placeholder {
