--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -10,6 +10,7 @@ body {
   font-family: $fontSuisseIntl;
   background-color: var(--background-color);
   transition: background-color 250ms;
+  overflow-x: hidden;
 }
 
 pre,
