--- a/styles/theme/typography.scss
+++ b/styles/theme/typography.scss
@@ -100,7 +100,9 @@ $fontAssetPath: '/fonts';
 
 @mixin h2 {
   font-size: toRem(24);
-  line-height: leading(70, 24);
+  line-height: leading(30, 24);
+  margin-top: toRem(19) !important;
+  margin-bottom: toRem(19) !important;
   font-weight: 500;
   letter-spacing: 0.72px;
   @include gradientText;
